Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21999

GridView::keyNavigationWraps does not work in nested GridView

XMLWordPrintable

      When the keyNavigationWraps property is set to "true" in a nested GridView and the number of items in the model is so small that no more than a raw is filled, pressing the up / down arrows causes the navigation wrapping to be broken.

      I'm attaching a small test case: if you uncomment the last four elements in the model, then everything works perfectly, and the navigation is confined into the above GridView. However, if you run the example with those lines commented (and therefore, the model elements fit in one row) and press the up / down keys, you'll see the the wrapping does not occur and the focus passes to the GridView below.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            mardy Alberto Mardegan
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes