Fix nested GridView key navigation with a single row or column.

Don't ignore key events when the currentIndex is unchanged due to
wrapping.
.

Task-number: QTBUG-21999
Change-Id: Idc82d472ca7ec495669207761bfe7de58b8781f9
Reviewed-by: Bea Lam <bea.lam@nokia.com>